--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
 <ol>
-  <a href="https://kubsu.ru/">КубГУ</a>
+  <li><a href="http://kubsu.ru/">КубГУ</a></li>
+  <li><a href="https://www.kubsu.ru/index.php">Главная страница КубГУ</a></li>
+  <li><a href="https://www.kubsu.ru/index.php"><img src="image.jpg" alt="Открытка" style="width: 600px;" /></a></li>
 </ol>
