--- a/index.html
+++ b/index.html
@@ -21,6 +21,21 @@
             <li><a href="../../fourth_page.html">Относительная ссылка на страницу в каталоге на два уровня выше</a></li>
             <li><a>В этом абзаце содержится <a href="">контекстная ссылка</a></a></li>
             <li><a href="https://www.kubsu.ru/index.php#:~:text=%D0%9E-,%D0%B2%D0%B0%D0%B6%D0%BD%D0%BE%D0%BC,-2%20567%20%D1%81%D1%82%D1%83%D0%B4%D0%B5%D0%BD%D1%82%D0%BE%D0%B2">Ссылка на фрагмент сайта КубГУ</a></li>
+            <li>
+                <img src="photo.jpg" alt="Картинка к кругом и квадратом" style="width:594px; height:316px" usemap="#map" />
+                <map name="map">
+                    <area shape="rect" alt="Квадрат" coords="7,5, 296,305" href="/second_page.html" />
+                    <area shape="circle" alt="Круг" coords="455,157, 130" href="/second_page.html" />
+                </map>
+            </li>
+            <li><a href="">Ссылка с пустым href</a></li>
+            <li><a>Ссылка без href</a></li>
+            <li><a href="./second_page.html" rel="nofollow">Ссылка с запретом перехода для поисковиков</a></li>
+            <li>
+                <noindex>
+                    <a href="/second_page.html">Ссылка, запрещенная для индексации поисковикам</a>
+                </noindex>
+            </li>
         </ol>
     </body>
 
