--- a/index.html
+++ b/index.html
@@ -8,24 +8,50 @@
 
     <body>
         <ol id="main_list">
-            <li><a href="http://kubsu.ru/">КубГУ</a></li>
-            <li><a href="https://www.kubsu.ru/index.php">Главная страница КубГУ</a></li>
-            <li><a href="https://www.kubsu.ru/index.php"><img src="image.jpg" alt="Открытка" style="width: 600px;" /></a></li>
-            <li><a href="/second_page.html">Сокращенная ссылка на внутреннюю страницу</a></li>
-            <li><a href="#main_list">Ссылка на начало списка</a></li>
-            <li><a href="./second_page.html?user=qwer&password=nxd7d&age=17">Ссылка с параметрами</a></li>
-            <li><a href="./second_page.html?id=12">Ссылка с параметром id</a></li>
-            <li><a href="./second_page.html">Относительная ссылка на страницу в текущем каталоге</a></li>
-            <li><a href="./about/third_page.html">Относительная ссылка на страницу в каталоге about</a></li>
-            <li><a href="../fourth_page.html">Относительная ссылка на страницу в каталоге на уровень выше</a></li>
-            <li><a href="../../fourth_page.html">Относительная ссылка на страницу в каталоге на два уровня выше</a></li>
-            <li><a>В этом абзаце содержится <a href="">контекстная ссылка</a></a></li>
+            <li>
+                <a href="http://kubsu.ru/">КубГУ</a>
+            </li>
+            <li>
+                <a href="https://www.kubsu.ru/index.php">Главная страница КубГУ</a>
+            </li>
+            <li>
+                <a href="https://www.kubsu.ru/index.php"><img src="image.jpg" alt="Открытка" style="width: 600px;"></a>
+            </li>
+            <li>
+                <a href="/second_page.html">Сокращенная ссылка на внутреннюю страницу</a>
+            </li>
+            <li>
+                <a href="#main_list">Ссылка на начало списка</a>
+            </li>
+            <li>
+                <a href="./second_page.html?user=qwer&password=nxd7d&age=17">Ссылка с параметрами</a>
+            </li>
+            <li>
+                <a href="./second_page.html?id=12">Ссылка с параметром id</a>
+            </li>
+            <li>
+                <a href="./second_page.html">Относительная ссылка на страницу в текущем каталоге</a>
+            </li>
+            <li>
+                <a href="./about/third_page.html">Относительная ссылка на страницу в каталоге about</a>
+            </li>
+            <li>
+                <a href="../fourth_page.html">Относительная ссылка на страницу в каталоге на уровень выше</a>
+            </li>
+            <li>
+                <a href="../../fourth_page.html">Относительная ссылка на страницу в каталоге на два уровня выше</a>
+            </li>
+            <li>
+                <a>
+                    В этом абзаце содержится <a href="">контекстная ссылка</a>
+                </a>
+            </li>
             <li><a href="https://www.kubsu.ru/index.php#:~:text=%D0%9E-,%D0%B2%D0%B0%D0%B6%D0%BD%D0%BE%D0%BC,-2%20567%20%D1%81%D1%82%D1%83%D0%B4%D0%B5%D0%BD%D1%82%D0%BE%D0%B2">Ссылка на фрагмент сайта КубГУ</a></li>
             <li>
-                <img src="photo.jpg" alt="Картинка к кругом и квадратом" style="width:594px; height:316px" usemap="#map" />
+                <img src="photo.jpg" alt="Картинка к кругом и квадратом" style="width:594px; height:316px" usemap="#map">
                 <map name="map">
-                    <area shape="rect" alt="Квадрат" coords="7,5, 296,305" href="/second_page.html" />
-                    <area shape="circle" alt="Круг" coords="455,157, 130" href="/second_page.html" />
+                    <area shape="rect" alt="Квадрат" coords="7,5, 296,305" href="/second_page.html">
+                    <area shape="circle" alt="Круг" coords="455,157, 130" href="/second_page.html">
                 </map>
             </li>
             <li><a href="">Ссылка с пустым href</a></li>
@@ -35,6 +61,13 @@
                 <noindex>
                     <a href="/second_page.html">Ссылка, запрещенная для индексации поисковикам</a>
                 </noindex>
+            </li>
+            <li>
+                <ol>
+                    <li><a href="https://ru.wikipedia.org" title="Главная страница Википедии">Википедия</a></li>
+                    <li><a href="https://ru.wikipedia.org/wiki/Мастер_и_Маргарита" title="Мастер и Маргарита">Книга</a></li>
+                    <li><a href="https://ru.wikipedia.org/wiki/Булгаков,_Михаил_Афанасьевич" title="Булгаков">Писатель</a></li>
+                </ol>
             </li>
         </ol>
     </body>
