--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <li><a>Ссылка без href</a></li>
             <li><a href="./second_page.html" rel="nofollow">Ссылка с запретом перехода для поисковиков</a></li>
             <li>
-                <!–noindex–><a href="/second_page.html">Ссылка, запрещенная для индексации поисковикам</a><!-/noindex->
+                <a href="/second_page.html"><!--noindex–->Ссылка, запрещенная для индексации поисковикам<!--/noindex--></a>
             </li>
             <li>
                 <ol>
