--- a/index.html
+++ b/index.html
@@ -57,13 +57,17 @@
                     <area shape="circle" alt="Круг" coords="455,157,130" href="/second_page.html">
                 </map>
             </li>
-            <li><a href="/">Ссылка с пустым href</a></li>
-            <li><a>Ссылка без href</a></li>
-            <li><a href="./second_page.html" rel="nofollow">Ссылка с запретом перехода для поисковиков</a></li>
             <li>
-                <a href="/second_page.html">
-                    <!--noindex–->Ссылка, запрещенная для индексации поисковикам<!--/noindex-->
-                </a>
+                <a href="/">Ссылка с пустым href</a>
+            </li>
+            <li>
+                <a>Ссылка без href</a>
+            </li>
+            <li>
+                <a href="./second_page.html" rel="nofollow">Ссылка с запретом перехода для поисковиков</a>
+            </li>
+            <li>
+                <!--noindex--><a href="/second_page.html">Ссылка, запрещенная для индексации поисковикам</a><!--/noindex-->
             </li>
             <li>
                 <ol>
