--- a/task3/index.html
+++ b/task3/index.html
@@ -3,32 +3,72 @@
 <html lang="ru">
 
     <head>
-        <title>task2</title>
+        <title>task3</title>
         <link rel="stylesheet" href="style.css">
     </head>
 
-    <body class="body">
+    <body>
 
-        <header class="header">
-            <img src="image.jpg" alt="Фото КубГУ" class="logo">
-            <div class="name">Сайт по заданию</div>
-            <nav class="nav">
+        <header>
+            <div id="name">
+                <img src="image.jpg" alt="Фото КубГУ" id="logo">
+                <div class="str">Сайт по заданию</div>
+            </div>
+            <nav>
                 <div class="dropdown">
                     <div>Меню</div>
                     <div class="dropdown-content">
-                        <a href="#list">Список</a>
+                        <a href="#hyperlinks-list">Список</a>
                         <a href="#table">Таблица</a>
                         <a href="#form">Форма</a>
                     </div>
                 </div>
-                <a href="#list">Список</a>
+                <a href="#hyperlinks-list">Список</a>
                 <a href="#table">Таблица</a>
                 <a href="#form">Форма</a>
             </nav>
         </header>
 
-        <div id="list" class="segment">
-            <ol id="main_list">
+        <div id="table" class="content">
+            <table>
+                <tr>
+                    <th>col 1</th>
+                    <th>col 2</th>
+                    <th>col 3</th>
+                    <th>col 4</th>
+                </tr>
+                <tr class="even-tr">
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                    <td>4</td>
+                </tr>
+                <tr>
+                    <td colspan="4">объединенная строка</td>
+                </tr>
+                <tr class="even-tr">
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                    <td>4</td>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                    <td>4</td>
+                </tr>
+                <tr class="even-tr">
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                    <td>4</td>
+                </tr>
+            </table>
+        </div>
+
+        <div id="hyperlinks-list" class="content">
+            <ol>
                 <li>
                     <a href="http://kubsu.ru/">КубГУ</a>
                 </li>
@@ -45,7 +85,7 @@
                     <a href="/index.html">Сокращенная ссылка на главную страницу</a>
                 </li>
                 <li>
-                    <a href="#main_list">Ссылка на начало списка</a>
+                    <a href="#hyperlinks-list">Ссылка на начало списка</a>
                 </li>
                 <li>
                     <a href="./second_page.html?user=qwer&password=nxd7d&age=17">Ссылка с параметрами</a>
@@ -103,45 +143,7 @@
             </ol>
         </div>
 
-        <div id="form" class="segment">
-            <table>
-                <tr>
-                    <th>col 1</th>
-                    <th>col 2</th>
-                    <th>col 3</th>
-                    <th>col 4</th>
-                </tr>
-                <tr class="even-tr">
-                    <td>1</td>
-                    <td>2</td>
-                    <td>3</td>
-                    <td>4</td>
-                </tr>
-                <tr>
-                    <td colspan="4">объединенная строка</td>
-                </tr>
-                <tr class="even-tr">
-                    <td>1</td>
-                    <td>2</td>
-                    <td>3</td>
-                    <td>4</td>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td>2</td>
-                    <td>3</td>
-                    <td>4</td>
-                </tr>
-                <tr class="even-tr">
-                    <td>1</td>
-                    <td>2</td>
-                    <td>3</td>
-                    <td>4</td>
-                </tr>
-            </table>
-        </div>
-
-        <div id="table" class="segment">
+        <div id="form" class="content">
             <form action="/"
                 method="POST">
 
@@ -217,6 +219,7 @@
         <footer>
             <div>(С) Владимир Крюков</div>
         </footer>
+
     </body>
 
 </html>
