--- a/task4/index.html
+++ b/task4/index.html
@@ -197,62 +197,80 @@
     <div id="form" class="container py-3 mb-4 bg-light">
         <form action="/" method="POST">
 
-            <label>
-                ФИО:<br>
-                <input name="field-name" placeholder="Введите ваше ФИО">
-            </label><br><br>
+            <div class="mb-3">
+                <label class="form-label">ФИО:
+                    <input class="form-control" name="field-name" placeholder="Введите ваше ФИО">
+                </label>
+            </div>
 
-            <label>
-                Телефон:<br>
-                <input name="field-phone" placeholder="Введите ваш номер" type="tel">
-            </label><br><br>
+            <div class="mb-3">
+                <label>Телефон:
+                    <input class="form-control" name="field-phone" placeholder="Введите ваш номер" type="tel">
+                </label>
+            </div>
 
-            <label>
-                Email:<br>
-                <input name="field-email" type="email" placeholder="Введите вашу почту">
-            </label><br><br>
+            <div class="mb-3">
+                <label>Email:
+                    <input class="form-control" name="field-email" type="email" placeholder="Введите вашу почту">
+                </label>
+            </div>
 
-            <label>
-                Дата рождения:<br>
-                <input name="field-birthday" type="date">
-            </label><br><br>
+            <div class="mb-3">
+                <label>Дата рождения:
+                    <input class="form-control" name="field-birthday" type="date">
+                </label>
+            </div>
 
-            Пол:<br>
-            <label><input type="radio" checked="checked" name="radio-group-1" value="Мужчина">
-                Мужской</label>
-            <label><input type="radio" name="radio-group-1" value="Женщина">
-                Женский</label><br><br>
+            <div class="mb-3 d-flex flex-column">
+                Пол:
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="radio-group-1" checked>
+                    <label class="form-check-label">
+                        Мужской
+                    </label>
+                </div>
+                <div class="form-check">
+                    <input class="form-check-input" type="radio" name="radio-group-1">
+                    <label class="form-check-label">
+                        Женский
+                    </label>
+                </div>
+            </div>
 
-            <label>
-                Любимый язык программирования:
-                <br>
-                <select name="field-pl" multiple="multiple" size="11">
-                    <option value="Pascal">Pascal</option>
-                    <option value="C">C</option>
-                    <option value="C++">C++</option>
-                    <option value="JavaScript">JavaScript</option>
-                    <option value="PHP">PHP</option>
-                    <option value="Python">Python</option>
-                    <option value="Java">Java</option>
-                    <option value="Haskel">Haskel</option>
-                    <option value="Clojure">Clojure</option>
-                    <option value="Prolog">Prolog</option>
-                    <option value="Scala">Scala</option>
-                </select>
-            </label><br><br>
+            <div class="mb-3">
+                <label>
+                    Любимый язык программирования:
+                    <select class="form-select" multiple name="field-pl" size="11">
+                        <option value="Pascal">Pascal</option>
+                        <option value="C">C</option>
+                        <option value="C++">C++</option>
+                        <option value="JavaScript">JavaScript</option>
+                        <option value="PHP">PHP</option>
+                        <option value="Python">Python</option>
+                        <option value="Java">Java</option>
+                        <option value="Haskel">Haskel</option>
+                        <option value="Clojure">Clojure</option>
+                        <option value="Prolog">Prolog</option>
+                        <option value="Scala">Scala</option>
+                    </select>
+                </label>
+            </div>
 
-            <label>
-                Биография:<br>
-                <textarea name="field-biograthy">Пишите здесь...</textarea>
-            </label><br><br>
+            <div class="mb-3">
+                <label>
+                    Биография:
+                    <textarea class="form-control" name="field-biograthy">Пишите здесь...</textarea>
+                </label>
+            </div>
 
-            <br>
-            <label>
-                <input type="checkbox" name="check-1">
-                с контрактом ознакомлен(а)
-            </label><br>
+            <div class="mb-3">
+                <input class="form-check-input" type="checkbox" name="check-1">
+                <label class="form-check-label">с контрактом ознакомлен(а)</label>
+            </div>
 
-            <input type="submit" value="Сохранить">
+            <div>
+                <button type="submit" class="btn btn-primary">Сохранить</button>
+            </div>
         </form>
     </div>
 
