--- a/task5/index.html
+++ b/task5/index.html
@@ -12,8 +12,8 @@
     <h1>Калькулятор стоимости заказа</h1>
     <form>
         <div class="ui-item">
-            <label for="product">Выберите товар</label>
-            <select id="product">
+            <label for="cost">Выберите товар</label>
+            <select id="cost">
                 <option value="5">Товар 1 - 5 руб.</option>
                 <option value="7">Товар 2 - 7 руб.</option>
                 <option value="15">Товар 3 - 15 руб.</option>
@@ -22,12 +22,12 @@
 
         <div class="ui-item">
             <label for="quantity">Кол-во товара</label>
-            <input type="number" id="quantity" placeholder="Введите количество товара">
+            <input id="quantity" placeholder="Введите количество товара">
         </div>
 
         <button type="button" id="calculate" class="ui-item">Стоимость</button>
     </form>
-    <div id="cost">Стоимость: </div>
+    <div id="result">Стоимость: </div>
 </body>
 
 </html>
