--- a/uni-website/index.html
+++ b/uni-website/index.html
@@ -479,7 +479,7 @@
   <div class="container col team">
     <h2 class="titleColor text-center mb-5 mb-sm-5 fw-bold">Команда</h2>
     <div class="row offset-sm-1">
-      <div class="col-sm-4 col-6">
+      <div class="col-md-4 col-6">
         <img src="img/IMG_2472_0.jpg" class="team-img">
         <div class="titleColor">
           <div class="fw-bold mt-3 team-name">
@@ -491,7 +491,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-4 col-6">
+      <div class="col-md-4 col-6">
         <img src="img/IMG_2539_0.jpg" class="team-img">
         <div class="titleColor">
           <div class="fw-bold mt-3 team-name">
@@ -502,7 +502,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-4 col-6">
+      <div class="col-md-4 col-6">
         <img src="img/IMG_2474_1.jpg" class="team-img">
         <div class="titleColor">
           <div class="fw-bold mt-3 team-name">
@@ -513,7 +513,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-4 col-6">
+      <div class="col-md-4 col-6">
         <img src="img/IMG_2522_0.jpg" class="team-img">
         <div class="titleColor">
           <div class="fw-bold mt-3 team-name">
@@ -525,7 +525,7 @@
           </div>
         </div>
       </div>
-      <div class="col-sm-4 col-6">
+      <div class="col-md-4 col-6">
         <img src="img/IMG_9971_16.jpg" class="team-img">
         <div class="titleColor">
           <div class="fw-bold mt-3 team-name">
@@ -814,7 +814,7 @@
     </div>
   </div>
 
-  <!-- мобильная менюшка (не работает как надо), оставь её в самом низу -->
+  <!-- мобильная менюшка -->
 
   <div class="mobile-nav">
     <img src="img/drupal-coder.svg" class="logo-m" alt="logo-m">
